Finished login page and gallery

--- a/about.html
+++ b/about.html
@@ -114,6 +114,15 @@
             align-self: center;
             max-height: 130px;
         }
+        .back-button {
+            padding: 7px 16px;
+            background-color: #CCC;
+            float: right;
+            margin-bottom: 15px
+        }
+        .back-button:hover {
+            background-color: #f1f1f1;
+        }
     </style>
 </head>
 
@@ -123,6 +132,7 @@
     </div>
     <div class="r2 one-column">
         <div class="c2">
+            <a href="./index.html" class="back-button">Back to Home</a>
             <h2>Company Information</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
