--- a/login.html
+++ b/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Assignment 4</title>
     <style>
@@ -53,9 +52,8 @@
             background-color: #f1f1f1;
         }
 
-        .two-column {
+        .one-column {
             display: grid;
-            grid-template-columns: 2fr 8fr;
             background-color: #DADED4;
             grid-column-gap: 1em;
         }
@@ -127,6 +125,14 @@
             float: right;
             margin-top: 12px;
         }
+
+        .error-message {
+            color: red;
+            display: block;
+            padding: 7px;
+            margin-top: 5px;
+            display: none;
+        }
     </style>
 </head>
 
@@ -134,26 +140,14 @@
     <div class="r1 box-shadow">
         <h2>Brandon Peterson</h2>
     </div>
-    <div class="r2 two-column">
-        <div class="c1 box-shadow">
-            <h2 class="txt-center">Navigation</h2>
-            <ul class="left-nav">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact-us.html">Contact</a></li>
-                <li><a href="#">Link 4</a></li>
-                <li><a href="#">Link 5</a></li>
-                <li><a href="#">Link 6</a></li>
-                <li><a href="#">Link 7</a></li>
-            </ul>
-        </div>
+    <div class="r2 one-column">
         <div class="c2">
-            <h2>Contact Us</h2>
             <form class="contact-form">
-                <input placeholder="First Name" type="text" id="first-name" class="contact-input">
-                <input placeholder="Last Name" type="text" id="last-name" class="contact-input">
-                <input placeholder="Email" type="email" id="email" class="contact-input">
-                <button onclick="contact.goToHome()" class="submit-button" type="submit">Submit</button>
+                <input placeholder="Username" type="text" id="username" class="contact-input">
+                <input placeholder="Password" type="password" id="password" class="contact-input">
+                <button onclick="login.login()" class="submit-button" type="button">Login</button>
+                <span id="error-box" class ="error-message">Error Here</span>
+
             </form>
         </div>
     </div>
@@ -161,7 +155,7 @@
         Copyright 2021 - Created by Brandon Peterson
     </div>
 
-    <script type ="text/javascript" src="./js/contact.js"></script>
+    <script type ="text/javascript" src="./js/login.js"></script>
 </body>
 
 </html>
